# rust-lambda

./: .gitignore  Cargo.toml  Makefile  fetch.ts  request.json
scripts/: fetch.rs  login.rs  login.sh
src/: cognito.rs  http_handler.rs  main.rs
src/jwks/: mod.rs  s3.rs
