[package]
name = "new-lambda-project"
version = "0.1.0"
edition = "2021"

[dependencies]
lambda_http = "1.0.0"
serde = "1.0.228"
serde_json = "1.0.149"

tokio = { version = "1", features = ["macros"] }
jsonwebtoken = { version = "10.3.0", features = ["rust_crypto"], default-features = false }
reqwest = { version = "0.13.1" }
aws-sdk-s3 = "1.121.0"
aws-smithy-types = "1.4.0"
aws-config = "1.8.12"

# Add to Cargo.toml
[profile.release]
opt-level = "z"         # Optimize for size
lto = true              # Enable Link Time Optimization
codegen-units = 1       # Reduce parallel code generation units
panic = "abort"         # Abort on panic (smaller binary)
strip = true            # Strip symbols from binary

[[bin]]
name = "fetch"
path = "scripts/fetch.rs"

